{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 729,
  "lineage": "127d8987-7e1d-26c7-d7b6-fee4405bc6f0",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "ibrahimnetworkinterface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/networkInterfaces/ibrahimnetwork-nic0",
            "internal_domain_name_suffix": "mvxjykv20tgu1oxqadba2bh4qg.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "192.168.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/publicIPAddresses/app-ip-linux0",
                "subnet_id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/virtualNetworks/linux-network/subnets/Subnet-linux0"
              }
            ],
            "location": "westeurope",
            "name": "ibrahimnetwork-nic0",
            "private_ip_address": "192.168.0.4",
            "private_ip_addresses": [
              "192.168.0.4"
            ],
            "resource_group_name": "Resource_Group_for_Test_BRO"
          },
          "dependencies": [
            "azurerm_public_ip.app-ip",
            "azurerm_resource_group.for_test_purposes",
            "azurerm_subnet.subnets-linux",
            "azurerm_virtual_network.linux-network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/networkInterfaces/ibrahimnetwork-nic1",
            "internal_domain_name_suffix": "mvxjykv20tgu1oxqadba2bh4qg.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "192.168.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/publicIPAddresses/app-ip-linux1",
                "subnet_id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/virtualNetworks/linux-network/subnets/Subnet-linux1"
              }
            ],
            "location": "westeurope",
            "name": "ibrahimnetwork-nic1",
            "private_ip_address": "192.168.1.4",
            "private_ip_addresses": [
              "192.168.1.4"
            ],
            "resource_group_name": "Resource_Group_for_Test_BRO"
          },
          "dependencies": [
            "azurerm_public_ip.app-ip",
            "azurerm_resource_group.for_test_purposes",
            "azurerm_subnet.subnets-linux",
            "azurerm_virtual_network.linux-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "ibrahimnetworkinterface-windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/networkInterfaces/ibrahimnetwork-nic0-windows",
            "internal_domain_name_suffix": "ker42upogw5ubp2fto3fju20dc.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "172.24.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/publicIPAddresses/app-ip-windows0",
                "subnet_id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/virtualNetworks/windows-networks/subnets/Subnet-windows0"
              }
            ],
            "location": "westeurope",
            "name": "ibrahimnetwork-nic0-windows",
            "private_ip_address": "172.24.0.4",
            "private_ip_addresses": [
              "172.24.0.4"
            ],
            "resource_group_name": "Resource_Group_for_Test_BRO"
          },
          "dependencies": [
            "azurerm_public_ip.app-ip-windows",
            "azurerm_resource_group.for_test_purposes",
            "azurerm_subnet.subnets-windows",
            "azurerm_virtual_network.windows-network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/networkInterfaces/ibrahimnetwork-nic1-windows",
            "internal_domain_name_suffix": "ker42upogw5ubp2fto3fju20dc.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "172.24.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/publicIPAddresses/app-ip-windows1",
                "subnet_id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/virtualNetworks/windows-networks/subnets/Subnet-windows1"
              }
            ],
            "location": "westeurope",
            "name": "ibrahimnetwork-nic1-windows",
            "private_ip_address": "172.24.1.4",
            "private_ip_addresses": [
              "172.24.1.4"
            ],
            "resource_group_name": "Resource_Group_for_Test_BRO"
          },
          "dependencies": [
            "azurerm_public_ip.app-ip-windows",
            "azurerm_resource_group.for_test_purposes",
            "azurerm_subnet.subnets-windows",
            "azurerm_virtual_network.windows-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "security-grouplinux",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/networkSecurityGroups/security-group_for_linux0",
            "location": "westeurope",
            "name": "security-group_for_linux0",
            "resource_group_name": "Resource_Group_for_Test_BRO",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "sshrule",
                "priority": 350,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.for_test_purposes"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/networkSecurityGroups/security-group_for_linux1",
            "location": "westeurope",
            "name": "security-group_for_linux1",
            "resource_group_name": "Resource_Group_for_Test_BRO",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "sshrule",
                "priority": 350,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.for_test_purposes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "security-groupwindows",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/networkSecurityGroups/security-group_for_windows0",
            "location": "westeurope",
            "name": "security-group_for_windows0",
            "resource_group_name": "Resource_Group_for_Test_BRO",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "RDP_RULE",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.for_test_purposes"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/networkSecurityGroups/security-group_for_windows1",
            "location": "westeurope",
            "name": "security-group_for_windows1",
            "resource_group_name": "Resource_Group_for_Test_BRO",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "RDP_RULE",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.for_test_purposes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "app-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/publicIPAddresses/app-ip-linux0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.4.0.101",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "app-ip-linux0",
            "resource_group_name": "Resource_Group_for_Test_BRO",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.for_test_purposes"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/publicIPAddresses/app-ip-linux1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.4.2.58",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "app-ip-linux1",
            "resource_group_name": "Resource_Group_for_Test_BRO",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.for_test_purposes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "app-ip-windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/publicIPAddresses/app-ip-windows0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.4.1.175",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "app-ip-windows0",
            "resource_group_name": "Resource_Group_for_Test_BRO",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.for_test_purposes"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/publicIPAddresses/app-ip-windows1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.4.3.19",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "app-ip-windows1",
            "resource_group_name": "Resource_Group_for_Test_BRO",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.for_test_purposes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnets-linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/virtualNetworks/linux-network/subnets/Subnet-linux0",
            "name": "Subnet-linux0",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Resource_Group_for_Test_BRO",
            "virtual_network_name": "linux-network"
          },
          "dependencies": [
            "azurerm_resource_group.for_test_purposes",
            "azurerm_virtual_network.linux-network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/virtualNetworks/linux-network/subnets/Subnet-linux1",
            "name": "Subnet-linux1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Resource_Group_for_Test_BRO",
            "virtual_network_name": "linux-network"
          },
          "dependencies": [
            "azurerm_resource_group.for_test_purposes",
            "azurerm_virtual_network.linux-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnets-windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.24.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/virtualNetworks/windows-networks/subnets/Subnet-windows0",
            "name": "Subnet-windows0",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Resource_Group_for_Test_BRO",
            "virtual_network_name": "windows-networks"
          },
          "dependencies": [
            "azurerm_resource_group.for_test_purposes",
            "azurerm_virtual_network.windows-network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.24.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/virtualNetworks/windows-networks/subnets/Subnet-windows1",
            "name": "Subnet-windows1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Resource_Group_for_Test_BRO",
            "virtual_network_name": "windows-networks"
          },
          "dependencies": [
            "azurerm_resource_group.for_test_purposes",
            "azurerm_virtual_network.windows-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "associationforlinux",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/virtualNetworks/linux-network/subnets/Subnet-linux0",
            "network_security_group_id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/networkSecurityGroups/security-group_for_linux0",
            "subnet_id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/virtualNetworks/linux-network/subnets/Subnet-linux0"
          },
          "dependencies": [
            "azurerm_network_security_group.security-grouplinux",
            "azurerm_resource_group.for_test_purposes",
            "azurerm_subnet.subnets-linux",
            "azurerm_virtual_network.linux-network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/virtualNetworks/linux-network/subnets/Subnet-linux1",
            "network_security_group_id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/networkSecurityGroups/security-group_for_linux1",
            "subnet_id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/virtualNetworks/linux-network/subnets/Subnet-linux1"
          },
          "dependencies": [
            "azurerm_network_security_group.security-grouplinux",
            "azurerm_resource_group.for_test_purposes",
            "azurerm_subnet.subnets-linux",
            "azurerm_virtual_network.linux-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "associationforwindows",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/virtualNetworks/windows-networks/subnets/Subnet-windows0",
            "network_security_group_id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/networkSecurityGroups/security-group_for_windows0",
            "subnet_id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/virtualNetworks/windows-networks/subnets/Subnet-windows0"
          },
          "dependencies": [
            "azurerm_network_security_group.security-groupwindows",
            "azurerm_resource_group.for_test_purposes",
            "azurerm_subnet.subnets-windows",
            "azurerm_virtual_network.windows-network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/virtualNetworks/windows-networks/subnets/Subnet-windows1",
            "network_security_group_id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/networkSecurityGroups/security-group_for_windows1",
            "subnet_id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/virtualNetworks/windows-networks/subnets/Subnet-windows1"
          },
          "dependencies": [
            "azurerm_network_security_group.security-groupwindows",
            "azurerm_resource_group.for_test_purposes",
            "azurerm_subnet.subnets-windows",
            "azurerm_virtual_network.windows-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "linux-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "2a9c6e65-d4bc-4dcd-baf0-00c20e04fe86",
            "id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/virtualNetworks/linux-network",
            "location": "westeurope",
            "name": "linux-network",
            "resource_group_name": "Resource_Group_for_Test_BRO"
          },
          "dependencies": [
            "azurerm_resource_group.for_test_purposes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "windows-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.24.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "51ee2351-35ee-40bf-bf85-9bba54d39a1a",
            "id": "/subscriptions/4ca364fb-7d95-4f63-8fe9-d174d2af3dec/resourceGroups/Resource_Group_for_Test_BRO/providers/Microsoft.Network/virtualNetworks/windows-networks",
            "location": "westeurope",
            "name": "windows-networks",
            "resource_group_name": "Resource_Group_for_Test_BRO"
          },
          "dependencies": [
            "azurerm_resource_group.for_test_purposes"
          ]
        }
      ]
    }
  ]
}